--- a/app/templates/dashboard/accounts.html
+++ b/app/templates/dashboard/accounts.html
@@ -53,7 +53,7 @@
         tr.active {
             background-color:#6c757d;
             color: #fff;
-        }   
+        }
 
         td.transaction-date {
             width: 10%;
@@ -204,10 +204,10 @@
                     inflow.html('<div><input id="inflow" name="inflow" type="text" class="form-control form-control-sm" placeholder="" value=' + inflow.text() + '></div>');
 
                     
-                    inflow.find('div').after('<div class="mt-2">' +
+                    $(this).after('<tr class="active editing"><td colspan=7 class="border-top-0"><div class="d-flex justify-content-end">' +
                                                 '<input type="hidden" id="posting_id" name="posting_id" value="' + $(this).attr('id').replace(/transaction-/, '') + '">' +
                                                 '<button type="button" class="btn btn-primary mr-1" onClick="window.location.reload();">Cancel</button>' +
-                                                '<input class="btn btn-primary ml-1" id="submit" type="submit" value="Save"></div>');
+                                                '<input class="btn btn-primary ml-1" id="submit" type="submit" value="Save"></div></td></tr>');
                 }
             });
 
